crates/plotnik-lib/tests/02-parser/recovery_validation/bare_error_keyword.txt
ERROR
==== diagnostics ====
error: `ERROR` and `MISSING` must be parenthesized
 --> query.ptk:1:1
  |
1 | ERROR
  | ^^^^^
  |
help: write `(ERROR)` or `(MISSING ";")`
